--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-native": "^0.66.15",
     "react": "17.0.2",
     "react-native": "0.67.2",
+    "react-native-elements": "^3.4.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "react-native-uuid": "^2.0.1",
