--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "react-native-uuid": "^2.0.1",
+    "react-native-vector-icons": "^9.0.0",
     "react-redux": "^7.2.6",
     "redux-persist": "^6.0.0"
   },
